--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -426,3 +426,9 @@ input[type=checkbox].toggle+label:active:after {
     font-weight: 600;
 }
 
+.spacing{
+    padding: 60px;
+    border-radius: 10px;
+    width: 90%;
+    margin: 20px;
+}
