--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -148,7 +148,7 @@
                       <i class="mdi mdi-cash me-2"></i>
                       Change Plan
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="{% url 'customer:record-payment' customer.uuid %}">
                       <i class="mdi mdi-receipt me-2"></i>
                       Record Payment
                     </a>
