--- a/customer/templates/customer/customer/list_view.html
+++ b/customer/templates/customer/customer/list_view.html
@@ -146,6 +146,10 @@
                       <i class="mdi mdi-receipt me-2"></i>
                       Record Payment
                     </a>
+                    <a class="dropdown-item" href="{% url 'customer:payment_list' customer.uuid %}">
+                      <i class="mdi mdi-receipt me-2"></i>
+                      Payment List
+                    </a>
                   </div>
                 </div>
               </td>
