--- a/customer/templates/customer/payment.html
+++ b/customer/templates/customer/payment.html
@@ -26,8 +26,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="{{ customer.legal_name.id_for_label }}">Customer Name</label>
-                   <b> {{ customer.legal_name }}</b>
+                        <label for="{{ customer.display_name.id_for_label }}">Customer Name</label>
+                   <b> {{ customer.display_name }}</b>
                 </div>
                 <div class="form-group ">
                     <h3 style="font-weight: normal;">Payment Details</h3>
@@ -56,7 +56,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <button type="submit" class="btn btn-gradient-primary me-2">Record Payment</button>
-                            <a href="{% url 'contact:list' %}" type="button" class="btn btn-outline-primary">Cancel</a>
+                            <a href="{% url 'customer:payment_list' customer.uuid %}" type="button" class="btn btn-outline-primary">Cancel</a>
                         </div>
                         <div>
                             <a class="text-danger" id="deleteButton" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete Payment</a>
