Dashboard Pages and Email

--- a/templates/_partials/_sidebar.html
+++ b/templates/_partials/_sidebar.html
@@ -26,7 +26,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'usage:overview' %}">
           <span class="menu-title">Usage</span>
           <i class="mdi mdi-chart-bar menu-icon"></i>
         </a>
@@ -38,7 +38,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'customer:list' %}">
+        <a class="nav-link" href="{% url 'customer:overview' %}">
           <span class="menu-title">Customers</span>
           <i class="mdi mdi-account-multiple menu-icon"></i>
         </a>
