--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/components.css' %}">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha384-Q6E9RHvbIyZFJoft+2mJLrMiD6DO/2E2+nUilk7avbgilWuoX99saN6XWapR+lLx" crossorigin="anonymous">
 
     {% block styles %}
     {% endblock %}
