--- a/customer/templates/customer/overview_view.html
+++ b/customer/templates/customer/overview_view.html
@@ -144,23 +144,23 @@
     }
 
     .update-icon-green {
-      font-size: 12px; /* Set the size of the icon */
+      font-size: 12px;
       color: #009126; 
     }
     .update-icon-red {
-        font-size: 12px; /* Set the size of the icon */
+        font-size: 12px;
         color: #DC3545; 
     }
 
     .update-text-green {
-        font-size: 12px; /* Decreased by 2 pixels */
+        font-size: 12px;
         color: #009126;
         font-weight: bold;
         margin-left:5px; 
     }
 
     .update-text-red {
-        font-size: 12px; /* Decreased by 2 pixels */
+        font-size: 12px;
         color: #DC3545;
         font-weight: bold;
         margin-left:5px; 
