--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -1,4 +1,4 @@
-{% extends "account/email/base_message.txt" %}
+{% extends "account/email/base_message.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -6,14 +6,24 @@
     {% autoescape off %}
         {% blocktrans %}
             Use the link below to set up a new password for your account.<br>
-            If you did not request to reset your password, ignore this email<br>
+            If you did not request to reset your password, ignore this email.<br>
             <br>
-            <a href="{{ password_reset_url }}" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; border: none; cursor: pointer; font-size: 14px;">Reset Password</a><br>
-            <br>
-            
         {% endblocktrans %}
+        <a href="{{ password_reset_url }}" style="
+            display: inline-block; 
+            padding: 10px 20px; 
+            background-color: violet; 
+            color: #ffffff; 
+            text-decoration: none; 
+            border-radius: 5px; 
+            border: none; 
+            cursor: pointer; 
+            font-size: 14px;">
+            Reset Password
+        </a>
+        <br><br>
         {% if username %}
-                In case you forgot, your username is {{ username }}.<br>
-            {% endif %}
+            In case you forgot, your username is {{ username }}.<br>
+        {% endif %}
     {% endautoescape %}
 {% endblock content %}
